# comfyui-resource-monitor

./: .gitignore  README.md  __init__.py  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  vite.config.ts
.github/workflows/: ci.yaml  publish_action.yaml
comfyui_resource_monitor/: __init__.py  collector.py  extension.py  nodes.py  routes.py  schemas.py  service.py
src/: constants.ts  index.ts
src/resource-monitor/: api.ts  clear-controls.ts  dom.ts  format.ts  hosts.ts  mount.ts  settings.ts  store.ts  styles.css  types.ts
tests/: resource-monitor.api.test.ts  resource-monitor.clear-controls.test.ts  resource-monitor.format.test.ts  resource-monitor.hosts.test.ts  resource-monitor.settings.test.ts  resource-monitor.store.test.ts
tests/python/: conftest.py  test_entrypoint_smoke.py  test_example_node_pattern.py  test_monitor_service.py  test_resource_collector.py  test_resource_snapshot_node.py
tests/python/fixtures/: example_node.py
