[project]
name = "comfyui-resource-monitor"
description = "A ComfyUI-native live resource monitor and snapshot node"
version = "1.0.0"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "nvidia-ml-py>=13.590.48",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
  "bump-my-version>=1.2.2",
  "pytest>=8.4.2",
]

[project.urls]
Repository = "https://github.com/PBandDev/comfyui-resource-monitor"

[tool.comfy]
PublisherId = "pbanddev"
DisplayName = "Resource Monitor"
Icon = "https://raw.githubusercontent.com/PBandDev/comfyui-resource-monitor/main/assets/icon.svg"
requires-comfyui = ">=0.3.0"
includes = ['dist/']

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
tag_name = "v{new_version}"
tag_message = "Release version {new_version}"
message = "chore: bump version to {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/constants.ts"
search = 'export const CURRENT_VERSION = "{current_version}"'
replace = 'export const CURRENT_VERSION = "{new_version}"'
